trunk/Archive2/6b/63c48908793df0/output
main.cpp:3:2: error: #error PP_FOR_MIN NOT DEFINED
 #error PP_FOR_MIN NOT DEFINED
  ^
main.cpp:6:2: error: #error PP_FOR_MAX NOT DEFINED
 #error PP_FOR_MAX NOT DEFINED
  ^
main.cpp:9:2: error: #error PP_FOR_BODY NOT DEFINED
 #error PP_FOR_BODY NOT DEFINED
  ^
main.cpp:20:6: error: #else after #else
     #else 
      ^
main.cpp:17:0: error: the conditional began here
     #if PP_FOR_MIN==PP_FOR_MAX
 ^
main.cpp:40:6: error: #else after #else
     #else 
      ^
main.cpp:37:0: error: the conditional began here
     #if PP_FOR_MIN1==PP_FOR_MAX1
 ^
main.cpp:60:6: error: #else after #else
     #else 
      ^
main.cpp:57:0: error: the conditional began here
     #if PP_FOR_MIN2==PP_FOR_MAX2
 ^
